--- a/inventory/templates/add_cloth.html
+++ b/inventory/templates/add_cloth.html
@@ -2,8 +2,7 @@
     {{form.csrf_token}}
     <div>{{form.color_name.label}}  {{form.color_name}}</div>
     <div>{{form.supplier.label}}  {{form.supplier}}</div>
-   
     <div>{{form.width.label}}  {{form.width}}</div>
-    <div>{{form.firbe.label}}  {{form.firbe}}</div>
+    <div>{{form.fibre.label}}  {{form.fibre}}</div>
     <div>{{form.submit}}</div>
 </form>
