--- a/inventory/templates/orders.html
+++ b/inventory/templates/orders.html
@@ -16,64 +16,169 @@
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
 
-    <body>
-        <div style="width:950px; margin:auto;">
-        <table  class="table table-striped">
-            <caption>销售单号<p>客户</p>日期</caption>
-            <thead>
-            <tr>
-                <th>品名</th> <!--这里要用选择更表框-->
-                <th>单价</th> <!--品名选定，单价就要出来-->
-                <th>数量</th>  
-                <th>小计</th> <!--如果单价和数量都有，小计就要出来结果-->
-                <th>操作</th>
-
-            </tr>
-            </thead>
-            <form role="form">
-            <tbody>
-               
-            <tr>
-                <td><select class="form-control">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select></td>
-                <td>28</td>
-                <td><input type="text" class="form-control" id="name" placeholder="请输入名称"></td>
-                <td>280</td>
-                <td><span id='del_row' onclick='delRow(this)'>X</span></td>
-            </tr>
-            <tr id='last_row'><td colsapn='4'><span id='add_row'>添加一行</span></td></tr>
-           
-            </tbody>
-        </form>
-        </table>
+    <body >
+        <div  class="container" style="text-align:center;">            
+            <div class="row">
+                <div class="col-xs-7 " >
+                    <h1 style="text-align:center;">销 售 单</h1>
+                    <table  class="table table-striped">
+                        <form role="form"></form>
+                        <caption>
+                            <div class="row">
+                                <div class="col-xs-4"><input type='text' class="form-control" value='123456'></div>
+                                <div class="col-xs-4">
+                                    <select class="form-control">
+                                        <option>Jack</option>
+                                        <option>ROSE</option>
+                                        <option>ZHU BI TE</option>
+                                        <option>David</option>
+                                        <option>John</option>
+                                    </select>
+                                </div>
+                                
+                                <div class="col-xs-3"><input type="date"  id="order_date" class="form-control" required style="width:220px;"></div>
+                            </div>
+                        </caption>
+                        <thead>
+                        <tr >
+                            <th style="text-align: center;">序号</th>
+                            <th style="text-align: center;">品名</th> <!--这里要用选择更表框-->
+                            <th style="text-align: center;">单价</th> <!--品名选定，单价就要出来-->
+                            <th style="text-align: right;">数量</th>  
+                            <th style="text-align: right;">小计</th> <!--如果单价和数量都有，小计就要出来结果-->
+                            <td> </td>
+                        </tr>
+                        </thead>
+                        
+                        <tbody>
+                        
+                        <tr>
+                            <td style="vertical-align: middle;">1</td>
+                            <td><select class="form-control">
+                                <option>圆领短袖连衣裙</option>
+                                <option>竹节棉V领喇叭袖</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select></td>
+                            <td style="text-align: right; vertical-align: middle;">20</td>
+                            <td ><input type="number" class="form-control quantity" style="text-align: right; " name="quantity" placeholder="请输入数量"  autocomplete="off" required></td>
+                            <td style="text-align: right; vertical-align: middle;">0</td>
+                            <td><span id='del_row' onclick='delRow(this)'>X</span></td>
+                        </tr>
+                        <tr id='last_row' style="font-size: large;">
+                            <td ></td>
+                            <td></td>
+                            <td></td>
+                            <td id='quantity' style="text-align: right;">0</td>
+                            <td id='amount' style="text-align: right;">0</td>
+                            <td ><span id='add_row' >+</span></td>
+                        </tr>
+                    
+                        </tbody>
+                    </form>
+                    </table>
+            </div>
+        </div>
     </div>
     </body>
     <script>
+        var xuhao = 2;
         $(function(){
-            var my_html='<tr>\
-                <td><select class="form-control">\
-                    <option>1</option>\
-                    <option>2</option>\
-                    <option>3</option>\
-                    <option>4</option>\
-                    <option>5</option>\
-                  </select></td>\
-                <td>28</td>\
-                <td><input type="text" class="form-control" id="name" placeholder="请输入名称"></td>\
-                <td>280</td>\
-                <td><span id="del_row" onclick="delRow(this)"">X</span></td>\
-            </tr>';
+            //设置日期
+            $("#order_date").val(myDate());
+            //攻取html
+            var get_html=$('tbody').children().eq(0).html();
+            
+           
             $('#add_row').click(function(){
-                $('#last_row').before(my_html);
+                //当有输入框数量没有输入时，不可以增加一行
+                //var flag=checkQuantityInput();
+                if(checkQuantityInput('.quantity')){
+                    $('#last_row').before('<tr>'+get_html.replace('<td>1</td>','<td>'+ xuhao++ +'</td>')+'</tr>');
+                };
+
+                
+            });
+
+            //输入框回车动作
+            $('tbody').on("keydown", ".quantity",function(e){
+                if(e.keyCode==13){
+                   //$('select').focus();
+                   $(this).blur()
+                };
+            })
+
+            //输入框失去焦点动作
+            $('tbody').on("blur", ".quantity",function(){
+                //当数量输入框失去焦点时，计算小计，总计金额，总计数量,当输入框没有数量时
+                //this 代表 input, parent 代表当前td
+                var amount=Number($(this).parent().prev().text()) * Number($(this).val())
+                if ($(this).val()==''){
+                    $(this).focus();
+                };
+                //小计金额
+                $(this).parent().next().text(amount)
+                //总计金额
+                $("#amount").text(mytotal(5));
+                //总计数量
+                $("#quantity").text(myQuantity());
+
             });
         });
+
         function delRow(id){
+            // 删除一行并将序号栏重新编码，数据重新统计
+            //设置序号为删除那一栏的序号
+            var i=$(id).parents('tr').children().first().text();
+            $(id).parents('tr').nextAll().not("#last_row").each(function(){
+                $(this).children().first().text(i++);
+            });
             $(id).parents('tr').remove();
+            xuhao--;
+            $("#amount").text(mytotal(5));
+            $("#quantity").text(myQuantity());
         };
+
+        function mytotal(td_index){
+            //表格金额统计，参数为要计算的是第几列
+            var i=0;
+            $('tbody tr').siblings().not("#last_row").each(function(){
+                i+=Number($(this).children().eq(td_index-1).text());
+            });
+            return i;
+        };
+
+        function myQuantity(){
+            //件数统计
+            var i=0;
+            $('.quantity').each(function(){
+                i+=Number($(this).val());
+            });
+            return i;
+        };
+        function checkQuantityInput(id){
+            //判断输入框是否有数据，没有就设置
+            var input_flag=true;
+            $(id).each(function(){
+                if ($(this).val()==''){
+                    $(this).focus();
+                    input_flag=false;
+                };
+            
+            });
+            
+            return input_flag;
+        };
+
+        function myDate(){
+            var d=new Date();
+            year = d.getFullYear()
+            month = d.getMonth() + 1
+            date = d.getDate()
+            return year + '-' + month + '-' + date
+        };
+
+       
     </script>
 </html>
