--- a/inventory/templates/addorder.html
+++ b/inventory/templates/addorder.html
@@ -2,6 +2,7 @@
 
 {% block title %}订单处理{% endblock %}
 
+{% block content %}
 
 <div  class="container" style="text-align:center;">            
     <div class="row">
@@ -14,11 +15,9 @@
                         <div class="col-xs-4"><input type='text' class="form-control" value='123456'></div>
                         <div class="col-xs-4">
                             <select class="form-control">
-                                <option>Jack</option>
-                                <option>ROSE</option>
-                                <option>ZHU BI TE</option>
-                                <option>David</option>
-                                <option>John</option>
+                                {% for item in data['custom'] %}
+                                <option>{{item.name}}</option>
+                                {% endfor %}
                             </select>
                         </div>
                         
@@ -40,14 +39,12 @@
                 
                 <tr>
                     <td style="vertical-align: middle;">1</td>
-                    <td><select class="form-control">
-                        <option>圆领短袖连衣裙</option>
-                        <option>竹节棉V领喇叭袖</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                    <td><select class="form-control goods" name='goods'>
+                        {% for item in data['goods'] %}
+                        <option value="{{item.id}}">{{item.name}}</option>
+                        {% endfor %}
                     </select></td>
-                    <td style="text-align: right; vertical-align: middle;">20</td>
+                    <td style="text-align: right; vertical-align: middle;" name='price'>20</td>
                     <td ><input type="number" class="form-control quantity" style="text-align: right; " name="quantity" placeholder="请输入数量"  autocomplete="off" required></td>
                     <td style="text-align: right; vertical-align: middle;">0</td>
                     <td><span id='del_row' onclick='delRow(this)'>X</span></td>
@@ -68,3 +65,4 @@
 </div>
 </div>
 
+{% endblock %}
