--- a/inventory/templates/base.html
+++ b/inventory/templates/base.html
@@ -14,7 +14,7 @@
         
         <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="{{url_for('static'),'myscript.js'}}"></script>
+        <script src="{{ url_for('static', filename='js/my.js') }}"></script>
     </head>
 
     <body> 
