--- a/inventory/templates/orders.html
+++ b/inventory/templates/orders.html
@@ -25,9 +25,9 @@
                         <form role="form"></form>
                         <caption>
                             <div class="row">
-                                <div class="col-xs-4"><input type='text' class="form-control" value='123456'></div>
+                                <div class="col-xs-4"><input type='text' class="form-control" id='order_id' readonly ></div>
                                 <div class="col-xs-4">
-                                    <select class="form-control">
+                                    <select class="form-control" id='customer'>
                                         <option>Jack</option>
                                         <option>ROSE</option>
                                         <option>ZHU BI TE</option>
