--- a/inventory/templates/addorder.html
+++ b/inventory/templates/addorder.html
@@ -12,9 +12,9 @@
                 <form role="form"></form>
                 <caption>
                     <div class="row">
-                        <div class="col-xs-4"><input type='text' class="form-control" value='123456'></div>
+                        <div class="col-xs-4"><input id='order_id' type='text' class="form-control" readonly></div>
                         <div class="col-xs-4">
-                            <select class="form-control">
+                            <select class="form-control" id='customer'>
                                 {% for item in data['custom'] %}
                                 <option>{{item.name}}</option>
                                 {% endfor %}
@@ -44,10 +44,10 @@
                         <option value="{{item.id}}">{{item.name}}</option>
                         {% endfor %}
                     </select></td>
-                    <td style="text-align: right; vertical-align: middle;" name='price'>20</td>
+                    <td style="text-align: right; vertical-align: middle;" name='price'>{{data['goods'][0].price}}</td>
                     <td ><input type="number" class="form-control quantity" style="text-align: right; " name="quantity" placeholder="请输入数量"  autocomplete="off" required></td>
-                    <td style="text-align: right; vertical-align: middle;">0</td>
-                    <td><span id='del_row' onclick='delRow(this)'>X</span></td>
+                    <td style="text-align: right; vertical-align: middle;">-</td>
+                    <td><span id='del_row' style="vertical-align: middle;" onclick='delRow(this)'>X</span></td>
                 </tr>
                 <tr id='last_row' style="font-size: large;">
                     <td ></td>
