--- a/inventory/templates/addorder.html
+++ b/inventory/templates/addorder.html
@@ -9,19 +9,19 @@
         <div class="col-xs-7 " >
             <h1 style="text-align:center;">销 售 单</h1>
             <table  class="table table-striped">
-                <form role="form"></form>
+                <form role="form" action='/test'method='post'>
                 <caption>
                     <div class="row">
-                        <div class="col-xs-4"><input id='order_id' type='text' class="form-control" readonly></div>
+                        <div class="col-xs-4"><input id='order_id' name='order_id' type='text' class="form-control" readonly></div>
                         <div class="col-xs-4">
-                            <select class="form-control" id='customer'>
+                            <select class="form-control" id='customer' name='customer'>
                                 {% for item in data['custom'] %}
                                 <option>{{item.name}}</option>
                                 {% endfor %}
                             </select>
                         </div>
                         
-                        <div class="col-xs-3"><input type="date"  id="order_date" class="form-control" required style="width:220px;"></div>
+                        <div class="col-xs-3"><input name='order_date' type="date"  id="order_date" class="form-control" required style="width:220px;"></div>
                     </div>
                 </caption>
                 <thead>
@@ -51,8 +51,11 @@
                 </tr>
                 <tr id='last_row' style="font-size: large;">
                     <td ></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type='button' class="form-control" id='actions' value='提交'></td>
+                    <td>
+                        <input type='hidden' id='order_quantity' name='order_quantity'>
+                        <input type='hidden' id='order_amount' name='order_amount'>
+                    </td>
                     <td id='quantity' style="text-align: right;">0</td>
                     <td id='amount' style="text-align: right;">0</td>
                     <td ><span id='add_row' >+</span></td>
