--- a/inventory/templates/add_cloth_order.html
+++ b/inventory/templates/add_cloth_order.html
@@ -4,29 +4,32 @@
     3 测试同名控件的值传递
 -->
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-<script src="my.js"></script>
+
 <form method='post'>
-    <input type='text' value='日期' name='order_date'>  <!--这里使用日期控件-->
-    <input type='text' value='订单编号' name='order_id'> <!--这个数值可以从数据库获取，自动添加-->
+   
     <table id='my_table' border=1>
-        <tr id='tb_title'>
+    <thead>
+        <tr >
             <th>序号</th>
             <th>颜色</th>
             <th>长度</th>
             <th>单价</th>
             <td>操作</td>
         </tr>
-        <tr id='row1' class='row'>
+    </thead>
+    <tbody>
+        <tr  class='row'>
             <td>1</td>
             <td><input type='text' name='color' value='13#'></td>
             <td><input type='text' name='length' value='100'></td>
             <td ><input type='text' name='price' value='8.3'></td>
             <td><span onclick='delRow(this)'>delete</span></td>
         </tr>
-        <tr id='tb_tail' ><td colspan=3><a href="#" id='add_row'>增加一行</a><input type="submit" /></td></tr>
 
+        <tr id='last_row' ><td colspan=3><span  id='add_row'>增加一行</span><input type="submit" /></td></tr>
+    </tbody>
     </table>
 </form>
 
 
-<script src="{{ url_for('static', filename='myl.js') }}"></script>
+<script src="{{ url_for('static', filename='js/my.js') }}"></script>
