--- a/inventory/templates/index.html
+++ b/inventory/templates/index.html
@@ -23,7 +23,7 @@
     <tr>
        
         <td>{{ item.order_id }}</td>
-        <td>{{ item.goods_name }}</td>
+        <td>{{ item.goods_name.name }}</td>
         <td>{{ item.goods_quantity }}</td>
         <td>{{ item.goods_amount }}</td>
         
