--- a/inventory/templates/addorder.html
+++ b/inventory/templates/addorder.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-xs-7 " >
             <h1 style="text-align:center;">销 售 单</h1>
-            <form role="form" action='/test'method='post'>
+            <form role="form" method='post'>
             <table  class="table table-striped">
                 <caption>
                     <div class="row">
@@ -63,6 +63,7 @@
                 </tr>
                 </tbody>
             </table>
+            
         </form>
     </div>
 </div>
