--- a/inventory/templates/base.html
+++ b/inventory/templates/base.html
@@ -8,7 +8,6 @@
                                      user-scalable=yes">
         <!-- 新 Bootstrap 核心 CSS 文件 -->
         <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-        <link href="{{ url_for('static',filename='style.css') }}" rel="stylesheet">
         
         <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
         <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
@@ -16,10 +15,22 @@
         <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="{{ url_for('static', filename='js/my.js') }}"></script>
+        <link href="{{ url_for('static',filename='style.css') }}" rel="stylesheet">
     </head>
 
-    <body> 
+    <body>
+      <div  class="container" >
+        <div class="row noprint">    
+          <div class="col-xs-12 nav" id='nav'>
+            <ul class="nav nav-tabs ">
+              <li class="active"><a href="{{url_for('index')}}">首页</a></li>
+              <li><a href="{{url_for('addOrder')}}">添加订单</a></li>
+              <li><a href="{{url_for('ordersList')}}">订单列表</a></li>
+            </ul>
+          </div>
+        </div>
       {% block content %}{% endblock %}
+      </div>
     </body>
   </html>
  
