--- a/inventory/static/style.css
+++ b/inventory/static/style.css
@@ -1,4 +1,20 @@
 .num { text-align:right; padding-right:10px;}
+select {
+    background-color: #f54545;
+    color: white;
+    /* 去掉三角 */
+    appearance:none;
+    -moz-appearance:none; /* Firefox */
+    -webkit-appearance:none; /* Safari 和 Chrome */
+    /* 去掉边框 */
+    order: 0;
+    display: block;
+    position: relative;
+}
+input {
+    border:none;
+    border-bottom:1px;
+}
 ul{margin:10px auto; text-align:right;}
 @media print {
     .noprint{
