--- a/inventory/templates/addorder.html
+++ b/inventory/templates/addorder.html
@@ -4,15 +4,19 @@
 
 {% block content %}
 
-<div  class="container" style="text-align:center;">            
+<div  class="container" style="text-align:center;">
     <div class="row">
-        <div class="col-xs-7 " >
+        <div class="col-xs-12" >
             <h1 style="text-align:center;">销 售 单</h1>
             <form role="form" method='post'>
             <table  class="table table-striped">
                 <caption>
                     <div class="row">
-                        <div class="col-xs-4"><input id='order_id' name='order_id' type='text' class="form-control" readonly></div>
+                        <div class="col-xs-6"></div>
+                        <div class="col-xs-6"><input name='order_date' type="date"  id="order_date" class="form-control" required ></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-8"><input id='order_id' name='order_id' type='text' class="form-control" readonly></div>
                         <div class="col-xs-4">
                             <select class="form-control" id='customer' name='customer'>
                                 {% for item in data['custom'] %}
@@ -20,8 +24,6 @@
                                 {% endfor %}
                             </select>
                         </div>
-                        
-                        <div class="col-xs-3"><input name='order_date' type="date"  id="order_date" class="form-control" required style="width:220px;"></div>
                     </div>
                 </caption>
                 <thead>
@@ -29,7 +31,7 @@
                     <th style="text-align: center;">序号</th>
                     <th style="text-align: center;">品名</th> <!--这里要用选择更表框-->
                     <th style="text-align: center;">单价</th> <!--品名选定，单价就要出来-->
-                    <th style="text-align: right;">数量</th>  
+                    <th style="text-align: right;">数量</th>
                     <th style="text-align: right;">小计</th> <!--如果单价和数量都有，小计就要出来结果-->
                     <td> </td>
                 </tr>
@@ -63,7 +65,6 @@
                 </tr>
                 </tbody>
             </table>
-            
         </form>
     </div>
 </div>
