--- a/inventory/templates/listorders.html
+++ b/inventory/templates/listorders.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1>订单汇总表</h1>
+<h1>订单列表</h1>
 <table class="table table-stdiped">
     <thead>
         <td>订单编号</td>
@@ -16,7 +16,6 @@
     <tbody>
     {% for item in data['od'] %}
     <tr>
-       
         <td>{{ item.id }}</td>
         <td>{{ item.customer }}</td>
         <td>{{ item.quantity }}</td>
@@ -27,20 +26,27 @@
             <a href="{{url_for('orderDel',orderid=item.id)}}">删除</a>
             <a href="{{url_for('orderUpdate',orderid=item.id)}}">编辑</a>
         </td>
-
     </tr>
     {% endfor %}
 </tbody>
 </table>
-
+<h1>订单明细</h1>
 <table class="table table-stdiped">
-    {% for item in data['ods'] %}
-    <tr>
-        <td>{{ item.order_id }}</td>
-        <td>{{ item.goods_name.name }}</td>
-        <td>{{ item.goods_quantity }}</td>
-        <td>{{ item.goods_amount }}</td>
-    </tr>
-    {% endfor %}
+    <thead>
+        <td>订单编号</td>
+        <td>商品名称</td>
+        <td>数量</td>
+        <td>小计</td>
+    </thead>
+    <tbody>
+         {% for item in data['ods'] %}
+        <tr>
+            <td>{{ item.order_id }}</td>
+            <td>{{ item.goods_name.name }}</td>
+            <td>{{ item.goods_quantity }}</td>
+            <td>{{ item.goods_amount }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
 
 {% endblock %}
